unpackaged/main/default/objects/Navatar_Notification__c/Navatar_Notification__c.object-meta.xml
<CustomObject>
    <label>Navatar Notification</label>
    <nameField>
        <displayFormat>NN-{000000}</displayFormat>
        <label>Navatar Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Navatar Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>