unpackaged/main/default/objects/Navatar_Notification__c/fields/Sorting_Order__c.field-meta.xml
<CustomField>
    <fullName>Sorting_Order__c</fullName>
    <formula>CASE( Type__c ,&#39;Add Note&#39;,2,&#39;Add Tag&#39;, 2,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sorting Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>