unpackaged/main/default/objects/Navatar_Notification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Note</fullName>
            </value>
            <value>
                <fullName>Add Tag</fullName>
            </value>
            <value>
                <fullName>Clip Info</fullName>
            </value>
            <value>
                <fullName>Account Info</fullName>
            </value>
            <value>
                <fullName>Deal Activity Info</fullName>
            </value>
            <value>
                <fullName>Theme Activity Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>